[package]
name = "anyleaf_ec_firmware"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
name = "anyleaf_ec_firmware"
path = "src/lib.rs"

[[bin]]
name = "anyleaf_ec_firmware"
path = "src/main.rs"

[dependencies]

[features]
standalone = ["cortex-m", "cortex-m-rt", "stm32-hal2/l4rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-