[package]
authors = ["Sean Link <sean.link@netally.com>"]
name = "usb_otg_no_crs_rtic"
edition = "2018"
version = "0.1.0"

[dependencies]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

